# DEEP-LEARNIN--ESP32-S3-MICROCONTROLLERS

./: README.md
esp_applications/mobilenet_classification/: CMakeLists.txt
esp_applications/mobilenetv2_cls/: CMakeLists.txt  partitions.csv
esp_applications/mobilenetv2_cls/main/: CMakeLists.txt  main.cpp
esp_applications/mobilenetv2_cls/main/models/esp32s3/: imagenet_cls_mobilenetv2_s8_v1.espdl
esp_applications/yolo11_detect/: CMakeLists.txt  partitions.csv
esp_applications/yolo11_detect/components/coco_detect/: CMakeLists.txt  coco_detect.cpp  coco_detect.hpp
esp_applications/yolo11_detect/components/coco_detect/models/: yolo11n_s8.espdl
esp_applications/yolo11_detect/main/: CMakeLists.txt  app_main.cpp
src/: quantize_onnx_model_MixedPrecision.py
src/mobilenetv2_quantization/:  quantize_onnx_model_default-8bit.py  quantize_onnx_model_16bit.py  quantize_onnx_model_LayerwiseEqualization.py
src/yolo11n_quantization/: yolo_quantize_Mixed_8_16bit.py  yolo_quantize_default_8bit.py
